compilers Lab/lab 2/evaluation_folder_assign2_publish/Testcases/fail/Unparse1.java
#define SUCCESS() (0)

class Test1 {
  public static void main (String [] arg) {
    System.out.println(new Exit().doit());
  }
}

class Exit {
  public static int doit() {
    return SUCCESS();
  }
}
